# skysclawper

./: .dockerignore  .gcloudignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  cloudbuild.yaml  plan.md
.github/workflows/: deps.yml  release.yml
Claude-Production-Grade-Suite/.orchestrator/receipts/: T7-devops.json  T8-remediation.json
config/: default.toml
crates/skyclaw-agent/: Cargo.toml
crates/skyclaw-agent/src/: budget.rs  circuit_breaker.rs  context.rs  executor.rs  runtime.rs
crates/skyclaw-channels/src/: cli.rs  discord.rs  slack.rs  telegram.rs
crates/skyclaw-core/src/: tenant_impl.rs
crates/skyclaw-core/src/config/: env.rs
crates/skyclaw-core/src/types/: config.rs  message.rs
crates/skyclaw-gateway/src/: health.rs  lib.rs  session.rs
crates/skyclaw-memory/src/: failover.rs  sqlite.rs
crates/skyclaw-observable/src/: metrics.rs
crates/skyclaw-providers/src/: anthropic.rs  lib.rs  openai_compat.rs
crates/skyclaw-tools/: Cargo.toml
crates/skyclaw-tools/src/: browser.rs  lib.rs  web_fetch.rs  web_search.rs
crates/skyclaw-vault/: Cargo.toml
crates/skyclaw-vault/src/: detector.rs  local.rs
infrastructure/terraform/: fly.toml  main.tf  outputs.tf  variables.tf
src/: main.rs
