[workspace]
resolver = "2"
members = [
    "crates/skyclaw-core",
    "crates/skyclaw-gateway",
    "crates/skyclaw-agent",
    "crates/skyclaw-providers",
    "crates/skyclaw-channels",
    "crates/skyclaw-memory",
    "crates/skyclaw-vault",
    "crates/skyclaw-tools",
    "crates/skyclaw-skills",
    "crates/skyclaw-automation",
    "crates/skyclaw-observable",
    "crates/skyclaw-filestore",
    "crates/skyclaw-test-utils",
]

[workspace.package]
version = "1.7.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/nagisanzenin/skyclaw"
rust-version = "1.82"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
serde_yaml = "0.9"

# HTTP
axum = { version = "0.8", features = ["ws"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres"] }

# Messaging
teloxide = { version = "0.17", features = ["macros"] }
serenity = { version = "0.12", features = ["gateway", "model"] }
poise = "0.6"

# Crypto
chacha20poly1305 = "0.10"
sha2 = "0.10"
zeroize = { version = "1", features = ["derive"] }
ed25519-dalek = { version = "2", features = ["serde"] }
rand = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging & observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
opentelemetry = "0.27"
tracing-opentelemetry = "0.28"

# Browser
chromiumoxide = { version = "0.7", features = ["tokio-runtime"] }

# Object storage
aws-sdk-s3 = "1"
aws-config = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Config
config = "0.14"

# TLS
rustls = "0.23"
tokio-rustls = "0.26"

# Utilities
bytes = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = { version = "2", features = ["serde"] }
regex = "1"
base64 = "0.22"
aes-gcm = "0.10"
hex = "0.4"
dirs = "6"
pin-project-lite = "0.2"
tokio-stream = "0.1"

# Internal crates
skyclaw-core = { path = "crates/skyclaw-core" }
skyclaw-gateway = { path = "crates/skyclaw-gateway" }
skyclaw-agent = { path = "crates/skyclaw-agent" }
skyclaw-providers = { path = "crates/skyclaw-providers" }
skyclaw-channels = { path = "crates/skyclaw-channels" }
skyclaw-memory = { path = "crates/skyclaw-memory" }
skyclaw-vault = { path = "crates/skyclaw-vault" }
skyclaw-tools = { path = "crates/skyclaw-tools" }
skyclaw-skills = { path = "crates/skyclaw-skills" }
skyclaw-automation = { path = "crates/skyclaw-automation" }
skyclaw-observable = { path = "crates/skyclaw-observable" }
skyclaw-filestore = { path = "crates/skyclaw-filestore" }
skyclaw-test-utils = { path = "crates/skyclaw-test-utils" }

[package]
name = "skyclaw"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Cloud-native Rust AI agent runtime"

[[bin]]
name = "skyclaw"
path = "src/main.rs"

[dependencies]
skyclaw-core.workspace = true
skyclaw-gateway.workspace = true
skyclaw-agent.workspace = true
skyclaw-providers.workspace = true
skyclaw-channels.workspace = true
skyclaw-memory.workspace = true
skyclaw-vault.workspace = true
skyclaw-tools.workspace = true
skyclaw-skills.workspace = true
skyclaw-automation.workspace = true
skyclaw-observable.workspace = true
skyclaw-filestore.workspace = true
tokio.workspace = true
clap.workspace = true
dirs.workspace = true
aes-gcm.workspace = true
hex.workspace = true
base64.workspace = true
rand.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
async-trait.workspace = true
uuid.workspace = true
chrono.workspace = true
futures.workspace = true

[features]
default = ["discord", "browser"]
telegram = ["skyclaw-channels/telegram"]
discord = ["skyclaw-channels/discord"]
slack = ["skyclaw-channels/slack"]
browser = ["skyclaw-tools/browser"]
postgres = ["skyclaw-memory/postgres"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "unwind"  # Required for catch_unwind — enables per-task panic recovery
