[package]
name = "skyclaw-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Tool integrations for SkyClaw agents"

[features]
browser = ["dep:chromiumoxide", "dep:futures"]

[dependencies]
skyclaw-core.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
async-trait.workspace = true
reqwest.workspace = true
bytes.workspace = true
chrono.workspace = true
dirs.workspace = true
nab.workspace = true

# Optional: Browser automation
chromiumoxide = { workspace = true, optional = true }
futures = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["full", "test-util"] }
skyclaw-test-utils.workspace = true
