[package]
name = "skyclaw-vault"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Secret management and encryption for SkyClaw"

[dependencies]
skyclaw-core.workspace = true
chacha20poly1305.workspace = true
zeroize.workspace = true
rand.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
dirs.workspace = true
base64.workspace = true
async-trait.workspace = true
chrono.workspace = true
regex.workspace = true

[dev-dependencies]
tempfile = "3"
